node-modules removed

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/laitinenp/zigbee#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "node-rest-client": "^2.0.1",
     "util": "^0.10.3",
     "xbee-api": "^0.4.3"
