--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "method-override": "^2.3.6",
+    "morgan": "^1.7.0",
     "node-rest-client": "^2.0.1",
     "util": "^0.10.3",
     "xbee-api": "^0.4.3"
