--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/laitinenp/zigbee#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bonescript": "^0.5.0",
     "express": "^4.14.0",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
